--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "parc-national-aaa",
+  "name": "parc-national",
   "version": "1.0.0",
   "description": "Projet de gestion de parc national",
   "main": "index.js",
